[package]
edition = "2024"
name    = "robust_downloader"
version = "0.0.1"

[dependencies]
backoff       = { version = "0.4.0", features = ["tokio", "futures"] }
futures       = "0.3.31"
futures-util  = "0.3.31"
indicatif     = "0.17.11"
reqwest       = { version = "0.12.15", features = ["stream"] }
thiserror     = "2.0.12"
tokio         = { version = "1.44.1", features = ["io-util", "fs", "macros", "rt-multi-thread"] }
typed-builder = "0.21.0"
