[package]
authors     = ["ityuany <519495771@qq.com>"]
categories  = ["network-programming", "asynchronous", "filesystem", "command-line-utilities"]
description = "A robust, concurrent file downloader with retry capabilities and progress tracking."
edition     = "2024"
include     = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
keywords    = ["downloader", "concurrent", "progress", "retry"]
license     = "MIT"
name        = "robust_downloader"
repository  = "https://github.com/ityuany/robust_downloader"
version     = "0.0.15"

[features]
default = ["sha2", "sha3", "native-tls"]

# TLS 后端选项
native-tls = ["reqwest/native-tls"]  # 使用系统原生 TLS
openssl    = ["reqwest/default-tls"] # 使用 OpenSSL
rustls     = ["reqwest/rustls-tls"]  # 使用纯 Rust 实现的 TLS

# 基础哈希算法
blake2 = ["hashery/blake2"]
blake3 = ["hashery/blake3"]
md5    = ["hashery/md5"]
sha1   = ["hashery/sha1"]
sha2   = ["hashery/sha2"]
sha3   = ["hashery/sha3"]

# 算法组合
all    = ["md5", "sha1", "sha2", "sha3", "blake2", "blake3"] # 启用所有算法
legacy = ["md5", "sha1"]                                     # 传统算法
modern = ["sha2", "sha3", "blake2", "blake3"]                # 现代/安全的算法


[dependencies]
backoff       = { version = "0.4.0", features = ["tokio", "futures"] }
futures       = "0.3.31"
futures-util  = "0.3.31"
hashery       = { version = "0.0.1", default-features = false, optional = true }
indicatif     = "0.17.11"
log           = "0.4.27"
reqwest       = { version = "0.12.15", features = ["stream"], default-features = false }
thiserror     = "2.0.12"
tokio         = { version = "1.44.2", features = ["io-util", "fs", "macros", "rt-multi-thread"] }
typed-builder = "0.21.0"
